--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ cron/jobs.json.bak*
 memory/*.sqlite
 workflows/state/runs/
 workflows/state/tools/
+workflows/state/index.json
 workflows/outbox/
 workflows/feedback/*.jsonl
 
